syntax = "proto3";

package slot_lock;

service SlotLockService {
  rpc LockSlot(LockSlotRequest) returns (LockSlotResponse);
  rpc GetSlotStatus(GetSlotStatusRequest) returns (GetSlotStatusResponse);
  rpc BatchLockSlot(BatchLockSlotRequest) returns (BatchLockSlotResponse);
  rpc BatchGetSlotStatus(BatchGetSlotStatusRequest) returns (BatchGetSlotStatusResponse);
  rpc BatchUnlockSlot(BatchUnlockSlotRequest) returns (BatchUnlockSlotResponse);
}

message LockSlotRequest {
  uint64 locked_at_block = 1;
  string contract_address = 2;
  bytes slot_index = 3;
  bytes revert_value = 4;
  bytes current_value = 5;
  string btc_txid = 6;
  uint64 btc_block = 7;
}

message LockSlotResponse {
  enum Status {
    UNKNOWN = 0;
    LOCKED = 1;
    ALREADY_LOCKED = 2;
  }
  Status status = 1;
  string contract_address = 2;
  bytes slot_index = 3;
}

message GetSlotStatusRequest {
  string contract_address = 1;
  uint64 current_block = 2;
  bytes slot_index = 3;
  uint64 btc_block = 4;
}

message GetSlotStatusResponse {
  enum Status {
    UNKNOWN = 0;
    LOCKED = 1;
    UNLOCKED = 2;
    REVERTED = 3;
  }
  Status status = 1;
  string contract_address = 2;
  bytes slot_index = 3;
  bytes revert_value = 4;
  bytes current_value = 5;
}

message BatchLockSlotRequest {
  uint64 locked_at_block = 1;
  uint64 btc_block = 2;
  repeated SlotData slots = 3;
}

message SlotData {
  string contract_address = 1;
  bytes slot_index = 2;
  bytes revert_value = 3;
  bytes current_value = 4;
  string btc_txid = 5;
}

message BatchLockSlotResponse {
  repeated SlotLockStatus slots = 1;
}

message SlotLockStatus {
  string contract_address = 1;
  bytes slot_index = 2;
  Status status = 3;

  enum Status {
    UNKNOWN = 0;
    LOCKED = 1;
    ALREADY_LOCKED = 2;
  }
}

message SlotIdentifier {
  string contract_address = 1;
  bytes slot_index = 2;
}

message BatchGetSlotStatusRequest {
  uint64 current_block = 1;
  uint64 btc_block = 2;
  repeated SlotIdentifier slots = 3;
}

message BatchGetSlotStatusResponse {
  repeated GetSlotStatusResponse slots = 1;
}

message BatchUnlockSlotRequest {
  uint64 current_block = 1;
  uint64 btc_block = 2;
  repeated SlotIdentifier slots = 3;
}

message BatchUnlockSlotResponse {
  repeated SlotIdentifier slots = 1;
}